--- a/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
+++ b/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
@@ -76,21 +76,22 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let evento of lista_evento">
+        <tr *ngFor="let evento of lista_evento | paginate: { itemsPerPage: itemsPerPage, currentPage: page }">
           <td class="align-middle">{{ evento.nome_evento }}</td>
           <td class="align-middle">{{ evento.ass_evento_sexec.secretaria }}</td>
-          <td class="align-middle">{{ evento.mes }}</td>
-          <td class="align-middle">{{ evento.ano }}</td>
-          <td class="align-middle">{{ evento.ass_evento_tipo.nome_evento }}</td>
-          <td class="align-middle">{{ evento.local }}</td>
-          <td class="align-middle">R$ {{ evento.custo_previo }}</td>
-          <td class="align-middle">{{ evento.ass_evento_recursos.recursos }}</td>
-          <td class="align-middle">{{ evento.lead_previsto }}</td>
-          <td *ngIf="profile_id === 3 || profile_id === 2" class="align-middle"><button (click)="onEdit(evento)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
-          <td *ngIf="profile_id === 3 || profile_id === 2" class="align-middle"><button (click)="deletaEvento(evento)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
+          <td class="align-middle text-center text-capitalize">{{ evento.mes }}</td>
+          <td class="align-middle text-center text-capitalize">{{ evento.ano }}</td>
+          <td class="align-middle text-center text-capitalize">{{ evento.ass_evento_tipo.nome_evento }}</td>
+          <td class="align-middle text-center text-capitalize">{{ evento.local }}</td>
+          <td class="align-middle text-center text-capitalize">R$ {{ evento.custo_previo }}</td>
+          <td class="align-middle text-center text-capitalize">{{ evento.ass_evento_recursos.recursos }}</td>
+          <td class="align-middle text-center text-capitalize">{{ evento.lead_previsto }}</td>
+          <td *ngIf="profile_id === 3 || (profile_id === 2 && id_sexec === evento.sexec_id)" class="align-middle"><button (click)="onEdit(evento)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
+          <td *ngIf="profile_id === 3 || (profile_id === 2 && id_sexec === evento.sexec_id)" class="align-middle"><button (click)="deletaEvento(evento)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
         </tr>
       </tbody>
     </table>
+    <pagination-controls class="text-center" (pageChange)="page = $event"></pagination-controls>
   </div>
 
 </section>
